--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>无标题文档</title>
 <style type="text/css">
 body {
-    background-image: url(../images/9793f45d-1864-47e2-bd7e-f6e1164bc2e0.jpg);
+    background-image: url(./9793f45d-1864-47e2-bd7e-f6e1164bc2e0.jpg);
     font-size: 24px;
     text-align: center;
 }
@@ -16,10 +16,10 @@ body {
 <table width="1550" border="1">
   <tbody>
     <tr>
-      <th scope="col"><img src="../images/ccd8e85b-af98-4531-a1f9-6a740a8869f3.jpg" width="500" height="249" alt=""/><img src="../images/706d405a-62b3-4778-8156-b6bb725a6cd4.jpg" width="700" height="307" alt=""/></th>
+      <th scope="col"><img src="./ccd8e85b-af98-4531-a1f9-6a740a8869f3.jpg" width="500" height="249" alt=""/><img src="./706d405a-62b3-4778-8156-b6bb725a6cd4.jpg" width="700" height="307" alt=""/></th>
     </tr>
     <tr>
-      <td align="center"><img src="../images/1fd8f5bb-5508-48c6-a197-66d811401e90.jpg" width="650" height="321" alt=""/><img src="../images/85d4b4c5-2151-4ec7-a74a-3ce4300f0168.jpg" width="500" height="320" alt=""/></td>
+      <td align="center"><img src="./1fd8f5bb-5508-48c6-a197-66d811401e90.jpg" width="650" height="321" alt=""/><img src="./85d4b4c5-2151-4ec7-a74a-3ce4300f0168.jpg" width="500" height="320" alt=""/></td>
     </tr>
     <tr>
       <td><p><strong><a href="part1.html">PART01</a>&nbsp;</strong></p>
