--- a/part2.html
+++ b/part2.html
@@ -15,7 +15,7 @@ body {
 <table width="1400" border="1">
   <tbody>
     <tr>
-      <th scope="col"><img src="../images/c4bbc1a6077f6d6204025ae583ce8fb0fe8138e7.jpg" width="500" height="373" alt=""><img src="file:///C|/Users/shiyo/Desktop/网页素材/cdeb0928-40cb-405e-8f3b-300b1c686a57.jpg" width="550" height="366" alt=""><br>
+      <th scope="col"><img src="./c4bbc1a6077f6d6204025ae583ce8fb0fe8138e7.jpg" width="500" height="373" alt=""><img src="file:///C|/Users/shiyo/Desktop/网页素材/cdeb0928-40cb-405e-8f3b-300b1c686a57.jpg" width="550" height="366" alt=""><br>
         <span style="font-size: xx-large"> 民国时期的艰难发展与英勇抗战<br>
           <br>
       </span></th>
