--- a/part3.html
+++ b/part3.html
@@ -5,7 +5,7 @@
 <title>无标题文档</title>
 <style type="text/css">
 body {
-    background-image: url(../images/%E8%83%8C%E6%99%AF.jpg);
+    background-image: url(./%E8%83%8C%E6%99%AF.jpg);
     font-size: xx-large;
     text-align: center;
 }
@@ -13,7 +13,7 @@ body {
 </head>
 
 <body>
-<img src="../images/4ed03ce8246f86aa1cf30b30c75ce185ef5ba906.jpg" width="1920" height="1280" alt=""/>
+<img src="./4ed03ce8246f86aa1cf30b30c75ce185ef5ba906.jpg" width="1920" height="1280" alt=""/>
 <div>&nbsp;</div>
 <p> 人民海军的沧桑巨变<span style="font-size: xx-large">——从小舢板到大航母</span></p>
 <p><span style="font-size: xx-large"><br>
