--- a/part5.html
+++ b/part5.html
@@ -5,7 +5,7 @@
 <title>无标题文档</title>
 <style type="text/css">
 body {
-    background-image: url(../images/4ed03ce8246f86aa1cf30b30c75ce185ef5ba906.jpg);
+    background-image: url(./4ed03ce8246f86aa1cf30b30c75ce185ef5ba906.jpg);
 }
 </style>
 </head>
