--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ body {
         <p><strong><a href="part2.html">PART02&nbsp;</a></strong></p>
         <p><strong><a href="part3.html">PART03&nbsp;</a></strong></p>
         <p><strong><a href="part4.html">PART04</a>&nbsp;</strong></p>
-        <p><strong><a href="part5.html">PART05</a></strong>&nbsp;</p></td>
+        <p><strong><a href="part5.html">PART05</a></strong>&nbsp;</p>
+          <p>&nbsp;<strong><a href="https://ssfdcadm.github.io/323dormitory/qinshi.html">返回寝室主页</a></strong><strong>&nbsp;</strong><strong>&nbsp;</strong></p></td>
     </tr>
     <tr> </tr>
     <tr>
